@@ -1,3 +1,7 @@
+2008-08-18  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/rs.rb: class2path with script_name.
+
 2008-08-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/action.rb: page method.
